--- a/css/demo.css
+++ b/css/demo.css
@@ -36,7 +36,7 @@ h1{
 	padding: 10px;
 	background: #fff;
 	color: #333;
-	margin-bottom: 2px;
+	margin-bottom: 3px;
 	border-radius: 3px;
 	box-shadow: 0 2px 3px rgba(0,0,0,.4);
 	cursor: pointer;
@@ -45,7 +45,7 @@ h1{
 	background: #ddd;
 }
 .task-detail-mask{
-	position: absolute;
+	position: fixed;
 	top:0;
 	bottom: 0;
 	left: 0;
@@ -58,7 +58,7 @@ h1{
 .task-detail>*{
 	margin:5px;
 }
-.task-detail>.remind>*{
+.remind{
 	margin:5px;
 }
 .task-detail{
@@ -71,6 +71,7 @@ h1{
 	width:50%;
 	height:100%;
 	border-radius: 3px;
+	overflow-y:auto;
 }
 .remind input,textarea{
 	border:0;
@@ -78,7 +79,41 @@ h1{
 	border-radius: 3px;
 	width:100%;
 	background: #ddd;
+	margin-bottom: 5px;
 }
 .task-detail,.task-detail-mask{
-	display: none;
+	display: none; 
+}
+.fr{
+	float: right;
+}
+.pic{
+	color: #888;
+	font-size:90%;
+}
+.pic:hover{
+	color:#333;
+}
+.task-content{
+	margin-left: right;
+}
+#add{
+	border:0;
+	padding: 10px;
+	border-radius: 3px;
+	width:100%;
+	background: #ddd;
+	margin-bottom: 5px;
+
+}
+.content{
+	padding: 10px;
+    font-weight: 900;
+    cursor: pointer;
+}
+.task-item.completed{
+	color: #aaa;
+	background: #ddd;
+	opacity: 0.4;
+	text-decoration: line-through;
 }
